--- a/.github/workflows/container_builds_weekly.yml
+++ b/.github/workflows/container_builds_weekly.yml
@@ -17,7 +17,7 @@ env:
 jobs:
   build_wheel_linux_dockers:
     name: Build wheel containers
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
     strategy:
       fail-fast: false
       matrix:
