Added `archs` option to pyproject.toml to keep building 32 bit images

--- a/python/pyproject.toml
+++ b/python/pyproject.toml
@@ -9,6 +9,8 @@ requires = [
 build-backend = "setuptools.build_meta"
 
 [tool.cibuildwheel]
+enable = ["pypy"]
+archs = ["auto32", "auto64"]
 build-frontend = "pip"
 build-verbosity = 1
 
