--- a/.github/workflows/ci_tests.yml
+++ b/.github/workflows/ci_tests.yml
@@ -77,6 +77,7 @@ jobs:
             swig:p
             libxml2:p
             libxslt:p
+            cppcheck:p
 
       - name: Checkout repository
         uses: actions/checkout@v5
