--- a/.github/workflows/ci_tests.yml
+++ b/.github/workflows/ci_tests.yml
@@ -49,7 +49,7 @@ jobs:
             testargs: "-E static-code-analysis"
           - os: windows-latest
             subsystem: mingw
-            testargs: ""
+            testargs: "-E static-code-analysis"
 
     steps:
       - name: Setup MSYS2
@@ -184,12 +184,11 @@ jobs:
             python3 -m pip install -r requirements.txt -r requirements_full.txt -r requirements_dev.txt
 
             # Download cppcheck std.cfg
-            curl -L -o std.cfg https://raw.githubusercontent.com/danmar/cppcheck/master/cfg/std.cfg
-            mkdir -p $HOME/.local/share/Cppcheck
-            mv std.cfg $HOME/.local/share/Cppcheck/
+            #curl -L -o std.cfg https://raw.githubusercontent.com/danmar/cppcheck/master/cfg/std.cfg
+            #mkdir -p $HOME/.local/share/Cppcheck
+            #mv std.cfg $HOME/.local/share/Cppcheck/
 
           fi
-
 
       - name: Check numpy
         run: |
