Set PYO3 forward compatibility for Python 3.14 on Windows

--- a/.github/workflows/ci_tests.yml
+++ b/.github/workflows/ci_tests.yml
@@ -182,6 +182,10 @@ jobs:
             echo "PYTHONIOENCODING=utf-8" >> $GITHUB_ENV
             echo "PYTHONUTF8=1" >> $GITHUB_ENV
 
+            # Handle that the configured Python interpreter version (3.14) is newer
+            # than PyO3's maximum supported version (3.13)
+            echo "PYO3_USE_ABI3_FORWARD_COMPATIBILITY=1" >> $GITHUB_ENV
+
             python3 -m pip install --upgrade pip
             python3 -m pip --version
 
