--- a/python/pyproject.toml
+++ b/python/pyproject.toml
@@ -1,6 +1,6 @@
 [build-system]
 requires = [
-  "numpy>=1.14.5,<2.1.3", # must agree with ../requirements.txt
+  "numpy>=1.14.5,<=2.4.2", # must agree with ../requirements.txt
   "swig==4.3.1",  # must agree with ../requirements_dev.txt
   "cmake==4.0.0", # must agree with ../requirements_dev.txt
   "setuptools==75.3.0", # must agree with ../requirements_dev.txt
