--- a/requirements_full.txt
+++ b/requirements_full.txt
@@ -9,7 +9,7 @@ pint>=0.15,<1
 # Plugins
 PyYAML>=5.4.1,<7
 pandas>=1.2,<2.4
-pyarrow>=14.0,<21.0
+pyarrow>=14.0,<23.0.0
 openpyxl>=3.0.9,<3.2
 jinja2>=3.0,<4
 paramiko>=3.0.0,<3.5.2
@@ -23,8 +23,8 @@ psycopg>=2,<4
 # Utilities
 # Bug in pydantic 2.10.0, 2.10.1: See https://github.com/pydantic/pydantic/issues/9898
 annotated-types>=0.5.0,<0.8.0
-pydantic>=1.10.0,!=2.10.0,!=2.10.1,<2.11.6
-pydantic-core>=0.42,<2.34.2
+pydantic>=1.10.0,!=2.10.0,!=2.10.1,<=2.12.6
+pydantic-core>=0.42,<=2.41.5
 typing_extensions>=4.1,<5; python_version<'3.9'
 scikit-image>=0.19,<1
 
