--- a/.github/workflows/ci_build_wheels.yml
+++ b/.github/workflows/ci_build_wheels.yml
@@ -60,11 +60,11 @@ jobs:
           #   py_minors: 8,13
 
           # 64-bit (Intel) macOS
-          - os: macos-14
-            system_type: ["macosx", ""]
-            arch: x86_64
-            py_minors: 8,14
-            deployment-target: "10.13"
+          #- os: macos-13
+          #  system_type: ["macosx", ""]
+          #  arch: x86_64
+          #  py_minors: 8,14
+          #  deployment-target: "10.13"
 
           # 64-bit (Apple Silicon) macOS
           - os: macos-14
