--- a/requirements_dev.txt
+++ b/requirements_dev.txt
@@ -5,3 +5,6 @@ wheel==0.45.1 # Must agree with python/pyproject.toml
 
 # Note, that setuptools 75.3.0 is the highest supported version in the Windows wheel
 setuptools==75.3.0 # Must agree with python/pyproject.toml
+
+# Used by patch-activate.sh
+virtualenvwrapper==6.1.1
