--- a/.github/workflows/cd_release.yml
+++ b/.github/workflows/cd_release.yml
@@ -20,6 +20,9 @@ jobs:
     steps:
     - name: Checkout repository
       uses: actions/checkout@v6
+      with:
+        fetch-depth: 0
+        token: ${{ secrets.RELEASE_PAT }}
 
     - name: Set up git user
       run: |
@@ -28,6 +31,7 @@ jobs:
 
     - name: Update version and tag
       run: |
+        git pull origin ${{ env.PUBLISH_UPDATE_BRANCH }}
         sed -i -E -e "s|^ +VERSION +[0-9.]+$|  VERSION ${GITHUB_REF#refs/tags/v}|" CMakeLists.txt
 
         git add CMakeLists.txt
@@ -36,16 +40,17 @@ jobs:
         TAG_MSG=.github/utils/release_tag_msg.txt
         sed -i "s|TAG_NAME|${GITHUB_REF#refs/tags/}|" "${TAG_MSG}"
         git tag -af -F "${TAG_MSG}" ${GITHUB_REF#refs/tags/}
+        git push --tags origin ${{ env.PUBLISH_UPDATE_BRANCH }}
 
-    - name: Update '${{ env.PUBLISH_UPDATE_BRANCH }}'
-      uses: CasperWA/push-protected@v2
-      with:
-        token: ${{ secrets.RELEASE_PAT }}
-        branch: ${{ env.PUBLISH_UPDATE_BRANCH }}
-        sleep: 15
-        force: true
-        tags: true
-        unprotect_reviews: true
+    #- name: Update '${{ env.PUBLISH_UPDATE_BRANCH }}'
+    #  uses: CasperWA/push-protected@v2
+    #  with:
+    #    token: ${{ secrets.RELEASE_PAT }}
+    #    branch: ${{ env.PUBLISH_UPDATE_BRANCH }}
+    #    sleep: 15
+    #    force: true
+    #    tags: true
+    #    unprotect_reviews: true
 
     - name: Get tagged versions
       run: echo "PREVIOUS_VERSION=$(git tag -l --sort -version:refname | sed -n 2p)" >> $GITHUB_ENV
