--- a/.github/workflows/cd_release.yml
+++ b/.github/workflows/cd_release.yml
@@ -30,14 +30,27 @@ jobs:
         git config --global user.name "${GIT_USER_NAME}"
         git config --global user.email "${GIT_USER_EMAIL}"
 
-    - name: Update version 
+    - name: Update version
+      shell: bash
       run: |
-        # git pull origin ${{ env.PUBLISH_UPDATE_BRANCH }}
-        sed -i -E -e "s|^ +VERSION +[0-9.]+$|  VERSION ${GITHUB_REF#refs/tags/v}|" CMakeLists.txt
+        python - <<'PY'
+        import re, os, pathlib
+
+        version = os.environ["GITHUB_REF"].removeprefix("refs/tags/v")
+        p = pathlib.Path("CMakeLists.txt")
+        txt = p.read_text()
+
+        new = re.sub(r'(?m)^( +VERSION +)[0-9.]+$', r'\g<1>' + version, txt)
+        if new == txt:
+            raise SystemExit("VERSION line not updated (pattern did not match)")
+
+        p.write_text(new)
+        print("Updated VERSION to", version)
+        PY
 
         git add CMakeLists.txt
         git commit -m "Release ${GITHUB_REF#refs/tags/}"
-        
+
         # TAG is already added by github
         #TAG_MSG=.github/utils/release_tag_msg.txt
         #sed -i "s|TAG_NAME|${GITHUB_REF#refs/tags/}|" "${TAG_MSG}"
@@ -133,6 +146,8 @@ jobs:
     steps:
     - name: Checkout repository
       uses: actions/checkout@v6
+      with:
+        fetch-depth: 0
 
     # This step is necessary because while this is done in the job above,
     # this job runs with the original commit SHA and does not have this change.
@@ -140,8 +155,22 @@ jobs:
     # this seems like the most low-tech solution (instead of caching/using artifacts):
     # Change the version in CMakeList.txt and build wheels
     - name: Update version
-      run: sed -i -E -e "s|^ +VERSION +[0-9.]+$|  VERSION ${GITHUB_REF#refs/tags/v}|" CMakeLists.txt
-      shell: bash  # Enforce bash shell to make `sed` work also on Windows
+      shell: bash
+      run: |
+        python - <<'PY'
+        import re, os, pathlib
+
+        version = os.environ["GITHUB_REF"].removeprefix("refs/tags/v")
+        p = pathlib.Path("CMakeLists.txt")
+        txt = p.read_text()
+
+        new = re.sub(r'(?m)^( +VERSION +)[0-9.]+$', r'\g<1>' + version, txt)
+        if new == txt:
+            raise SystemExit("VERSION line not updated (pattern did not match)")
+
+        p.write_text(new)
+        print("Updated VERSION to", version)
+        PY
 
     - name: Install Python for running cibuildwheel
       uses: actions/setup-python@v6
@@ -176,6 +205,7 @@ jobs:
         python -m cibuildwheel --print-build-identifiers python
         python -m cibuildwheel --output-dir wheelhouse python
       env:
+        CIBW_BEFORE_BUILD: "python -m pip install -U pip setuptools wheel"
         CIBW_BUILD: cp3${{ contains(matrix.py_minors, ',') && format('{{{0}}}', matrix.py_minors) || matrix.py_minors }}-${{ matrix.system_type[0] }}${{ matrix.arch != '' && '_' || '' }}${{ matrix.arch }}
         CIBW_ENVIRONMENT_MACOS: "MACOSX_DEPLOYMENT_TARGET=${{ matrix.deployment-target }}"
         CIBW_MANYLINUX_X86_64_IMAGE: ${{ env.CONTAINER_REGISTRY }}/sintef/dlite-python-manylinux${{ matrix.system_type[1] }}_x86_64:latest
@@ -204,7 +234,22 @@ jobs:
     # this seems like the most low-tech solution (instead of caching/using artifacts):
     # Change the version in CMakeList.txt and build wheels
     - name: Update version
-      run: sed -i -E -e "s|^ +VERSION +[0-9.]+$|  VERSION ${GITHUB_REF#refs/tags/v}|" CMakeLists.txt
+      shell: bash
+      run: |
+        python - <<'PY'
+        import re, os, pathlib
+
+        version = os.environ["GITHUB_REF"].removeprefix("refs/tags/v")
+        p = pathlib.Path("CMakeLists.txt")
+        txt = p.read_text()
+
+        new = re.sub(r'(?m)^( +VERSION +)[0-9.]+$', r'\g<1>' + version, txt)
+        if new == txt:
+            raise SystemExit("VERSION line not updated (pattern did not match)")
+
+        p.write_text(new)
+        print("Updated VERSION to", version)
+        PY
 
     - name: Set up Python
       uses: actions/setup-python@v6
@@ -252,6 +297,25 @@ jobs:
         cd ..
         ls -lah dist
 
+    - name: Normalize distribution filenames for PyPI
+      shell: bash
+      run: |
+        shopt -s nullglob
+
+        for f in dist/DLite_Python-*; do
+          nf="$(echo "$f" | sed 's|dist/DLite_Python-|dist/dlite_python-|')"
+          echo "Renaming $f -> $nf"
+          mv "$f" "$nf"
+        done
+
+        for f in dist/DLite-Python-*; do
+          nf="$(echo "$f" | sed 's|dist/DLite-Python-|dist/dlite_python-|')"
+          echo "Renaming $f -> $nf"
+          mv "$f" "$nf"
+        done
+
+        ls -lah dist
+
     # - name: Publish package to Test PyPI
     #   uses: pypa/gh-action-pypi-publish@release/v1
     #   with:
@@ -261,3 +325,4 @@ jobs:
 
     - name: Publish package to PyPI
       uses: pypa/gh-action-pypi-publish@release/v1
+
